ignore tabs in kitty

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1644,8 +1644,9 @@ macos_thicken_font 0.5
 
 #: New tab
 
-# map kitty_mod+t new_tab
-# map cmd+t       new_tab
+# I don't want tabs. Changing from `new_tab` to `no_op`.
+map kitty_mod+t no_op
+map cmd+t       no_op
 
 #: Close tab
 
