--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -54,7 +54,7 @@ window_status_current_format="#[fg=$tmux_thm_bg,bg=$tmux_thm_active] #I #[fg=$tm
 
 set -gq status-left ""
 
-set -gq status-right "${right_column2}"
+set -gq status-right "${right_column1}${right_column2}"
 
 setw -gq window-status-format "${window_status_format}"
 setw -gq window-status-current-format "${window_status_current_format}"
