--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -81,7 +81,8 @@ colors:
 # Any items in the `env` entry below will be added as
 # environment variables. Some entries may override variables
 # set by alacritty itself.
-#env:
+env:
+  TERM: xterm-256color
   # TERM variable
   #
   # This value is used to set the `$TERM` environment variable for
