--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -5,9 +5,20 @@ set-option -ga terminal-overrides ",xterm-256color:Tc"
 # don't add a delay when pressing escape
 set -s escape-time 0
 
+# gruvbox material theme
+# tmux_thm_fg="#d4be98"
+# tmux_thm_bg="default"
+# tmux_thm_black="#1d2021"
+# tmux_thm_gray="#504945"
+# tmux_thm_cyan="#89b482"
+# tmux_thm_blue="#7daea3"
+# tmux_thm_purple="#d3869b"
+# tmux_thm_active="#e78a4e"
+
 # electron_highlighter theme
 tmux_thm_fg="#a8b5d1"
-tmux_thm_bg="#141820"
+tmux_thm_bg="default"
+tmux_thm_black="#141820"
 tmux_thm_gray="#3b4261"
 tmux_thm_cyan="#4ff2f8"
 tmux_thm_blue="#82aaff"
@@ -17,6 +28,7 @@ tmux_thm_active="#34febb"
 # status
 set -gq status "on"
 set -gq status-bg "${tmux_thm_bg}"
+# set -gq status-bg "default"
 set -gq status-justify "left"
 set -gq status-left-length "100"
 set -gq status-right-length "100"
@@ -41,16 +53,16 @@ right_separator="█"
 left_separator="█"
 
 # current directory name
-right_column1="#[fg=$tmux_thm_purple,bg=$tmux_thm_bg,nobold,nounderscore,noitalics]$right_separator#[fg=$tmux_thm_bg,bg=$tmux_thm_purple,nobold,nounderscore,noitalics]  #[fg=$tmux_thm_fg,bg=$tmux_thm_gray] #{b:pane_current_path} "
+right_column1="#[fg=$tmux_thm_purple,bg=$tmux_thm_bg,nobold,nounderscore,noitalics]$right_separator#[fg=$tmux_thm_black,bg=$tmux_thm_purple,nobold,nounderscore,noitalics]  #[fg=$tmux_thm_fg,bg=$tmux_thm_gray] #{b:pane_current_path} "
 
 # current session name
-right_column2="#[fg=$tmux_thm_cyan,bg=$tmux_thm_gray]$right_separator#[fg=$tmux_thm_bg,bg=$tmux_thm_cyan,nobold,nounderscore,noitalics] #[fg=$tmux_thm_fg,bg=$tmux_thm_gray] #S "
+right_column2="#[fg=$tmux_thm_cyan,bg=$tmux_thm_gray]$right_separator#[fg=$tmux_thm_black,bg=$tmux_thm_cyan,nobold,nounderscore,noitalics] #[fg=$tmux_thm_fg,bg=$tmux_thm_gray] #S "
 
 # inactive window
 window_status_format="#[fg=$tmux_thm_blue,bg=$tmux_thm_gray] #I #[fg=$tmux_thm_fg,bg=$tmux_thm_bg] #W "
 
 # active window
-window_status_current_format="#[fg=$tmux_thm_bg,bg=$tmux_thm_active] #I #[fg=$tmux_thm_fg,bg=$tmux_thm_bg] #W "
+window_status_current_format="#[fg=$tmux_thm_black,bg=$tmux_thm_active] #I #[fg=$tmux_thm_fg,bg=$tmux_thm_bg] #W "
 
 set -gq status-left ""
 
@@ -59,6 +71,8 @@ set -gq status-right "${right_column1}${right_column2}"
 setw -gq window-status-format "${window_status_format}"
 setw -gq window-status-current-format "${window_status_current_format}"
 
+# make background color "default" - e.g., use the color of the terminal.
+set-option -g status-style bg=default
 #------------------------------
 # End theme
 #------------------------------
