remove slack themes - new slack ui doesn't support them

--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -47,7 +47,7 @@ symbol = ""
 format = '[$symbol $branch]($style) '
 
 [git_status]
-style = "bright-yellow"
+style = "yellow"
 deleted = "×"
 
 # remove bold styling from language prompts
