--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -6,24 +6,34 @@ set-option -ga terminal-overrides ",xterm-256color:Tc"
 set -s escape-time 0
 
 # gruvbox material theme
-# tmux_thm_fg="#d4be98"
-# tmux_thm_bg="default"
-# tmux_thm_black="#1d2021"
-# tmux_thm_gray="#504945"
-# tmux_thm_cyan="#89b482"
-# tmux_thm_blue="#7daea3"
-# tmux_thm_purple="#d3869b"
-# tmux_thm_active="#e78a4e"
+tmux_thm_fg="#d4be98"
+tmux_thm_bg="default"
+tmux_thm_black="#1d2021"
+tmux_thm_gray="#504945"
+tmux_thm_session_fg="#89b482"
+tmux_thm_inactive_fg="#7daea3"
+tmux_thm_dir_fg="#d3869b"
+tmux_thm_active="#e78a4e"
 
 # electron_highlighter theme
-tmux_thm_fg="#a8b5d1"
-tmux_thm_bg="default"
-tmux_thm_black="#141820"
-tmux_thm_gray="#3b4261"
-tmux_thm_cyan="#4ff2f8"
-tmux_thm_blue="#82aaff"
-tmux_thm_purple="#a78bfa"
-tmux_thm_active="#34febb"
+# tmux_thm_fg="#a8b5d1"
+# tmux_thm_bg="default"
+# tmux_thm_black="#141820"
+# tmux_thm_gray="#3b4261"
+# tmux_thm_session_fg="#4ff2f8"
+# tmux_thm_inactive_fg="#82aaff"
+# tmux_thm_dir_fg="#a78bfa"
+# tmux_thm_active="#34febb"
+
+# base16_eighties theme
+# tmux_thm_fg="#e0e0e0"
+# tmux_thm_bg="default"
+# tmux_thm_black="#2d2d2d"
+# tmux_thm_gray="#515151"
+# tmux_thm_session_fg="#66cccc"
+# tmux_thm_dir_fg="#cc99cc"
+# tmux_thm_inactive_fg="#d6d6d6"
+# tmux_thm_active="#99cc99"
 
 # status
 set -gq status "on"
@@ -34,12 +44,12 @@ set -gq status-left-length "100"
 set -gq status-right-length "100"
 
 # messages
-set -gq message-style "fg=${tmux_thm_cyan},bg=${tmux_thm_gray},align=centre"
-set -gq message-command-style "fg=${tmux_thm_cyan},bg=${tmux_thm_gray},align=centre"
+set -gq message-style "fg=${tmux_thm_session_fg},bg=${tmux_thm_gray},align=centre"
+set -gq message-command-style "fg=${tmux_thm_session_fg},bg=${tmux_thm_gray},align=centre"
 
 # panes
 set -gq pane-border-style "fg=${tmux_thm_gray}"
-set -gq pane-active-border-style "fg=${tmux_thm_blue}"
+set -gq pane-active-border-style "fg=${tmux_thm_inactive_fg}"
 
 # windows
 setw -gq window-status-activity-style "fg=${tmux_thm_fg},bg=${tmux_thm_bg},none"
@@ -53,13 +63,13 @@ right_separator="█"
 left_separator="█"
 
 # current directory name
-right_column1="#[fg=$tmux_thm_purple,bg=$tmux_thm_bg,nobold,nounderscore,noitalics]$right_separator#[fg=$tmux_thm_black,bg=$tmux_thm_purple,nobold,nounderscore,noitalics]  #[fg=$tmux_thm_fg,bg=$tmux_thm_gray] #{b:pane_current_path} "
+right_column1="#[fg=$tmux_thm_dir_fg,bg=$tmux_thm_bg,nobold,nounderscore,noitalics]$right_separator#[fg=$tmux_thm_black,bg=$tmux_thm_dir_fg,nobold,nounderscore,noitalics]  #[fg=$tmux_thm_fg,bg=$tmux_thm_gray] #{b:pane_current_path} "
 
 # current session name
-right_column2="#[fg=$tmux_thm_cyan,bg=$tmux_thm_gray]$right_separator#[fg=$tmux_thm_black,bg=$tmux_thm_cyan,nobold,nounderscore,noitalics] #[fg=$tmux_thm_fg,bg=$tmux_thm_gray] #S "
+right_column2="#[fg=$tmux_thm_session_fg,bg=$tmux_thm_gray]$right_separator#[fg=$tmux_thm_black,bg=$tmux_thm_session_fg,nobold,nounderscore,noitalics] #[fg=$tmux_thm_fg,bg=$tmux_thm_gray] #S "
 
 # inactive window
-window_status_format="#[fg=$tmux_thm_blue,bg=$tmux_thm_gray] #I #[fg=$tmux_thm_fg,bg=$tmux_thm_bg] #W "
+window_status_format="#[fg=$tmux_thm_inactive_fg,bg=$tmux_thm_gray] #I #[fg=$tmux_thm_fg,bg=$tmux_thm_bg] #W "
 
 # active window
 window_status_current_format="#[fg=$tmux_thm_black,bg=$tmux_thm_active] #I #[fg=$tmux_thm_fg,bg=$tmux_thm_bg] #W "
