--- a/kitty/.config/kitty/eighties.conf
+++ b/kitty/.config/kitty/eighties.conf
@@ -1,15 +1,9 @@
 # vim:ft=kitty
-# monochrome colors, keeping these around for reference
-# dark0 = #2D2D2D
-# dark1 = #393939
-# dark2 = #515151
-# dark3 = #747369
-# dark4 = #999999
-# light4 = #a09f93
-# light3 = #b4b4b4
-# light2 = #d6d6d6
-# light1 = #e0e0e0
-# light0 = #ffffff
+
+## name: Eighties
+## license: MIT
+## author: Mike McBride
+## upstream: https://github.com/mikemcbride/eighties.nvim
 
 background #2D2D2D
 foreground #e0e0e0
@@ -17,7 +11,7 @@ foreground #e0e0e0
 selection_background #d6d6d6
 selection_foreground #2d2d2d
 
-cursor #a09f93
+cursor #a0a0a0
 cursor_text_color background
 
 # Black
@@ -34,17 +28,14 @@ color10 #99cc99
 
 # Yellow
 color3  #ffcc66
-#orange
+# Orange
 color11 #f9a170
 
 # Blue
 color4 #72aeea
 color12 #72aeea
-# old blue (I think its too dark)
-# color4  #6699cc
-# color12 #6699cc
 
-# Magenta/purple
+# Purple
 color5  #cc99cc
 color13 #cc99cc
 
