--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -6,26 +6,26 @@ set-option -ga terminal-overrides ",xterm-256color:Tc"
 set -s escape-time 0
 
 # gruvbox material theme
-tmux_thm_fg="#d4be98"
-tmux_thm_bg="default"
-tmux_thm_black="#1d2021"
-tmux_thm_gray="#504945"
-tmux_thm_session_fg="#89b482"
-tmux_thm_inactive_fg="#7daea3"
-tmux_thm_dir_fg="#d3869b"
-tmux_thm_active="#e78a4e"
+# tmux_thm_fg="#d4be98"
+# tmux_thm_bg="default"
+# tmux_thm_black="#1d2021"
+# tmux_thm_gray="#504945"
+# tmux_thm_session_fg="#89b482"
+# tmux_thm_inactive_fg="#7daea3"
+# tmux_thm_dir_fg="#d3869b"
+# tmux_thm_active="#e78a4e"
 
 # electron_highlighter theme
-# tmux_thm_fg="#a8b5d1"
-# tmux_thm_bg="default"
-# tmux_thm_black="#141820"
-# tmux_thm_gray="#3b4261"
-# tmux_thm_session_fg="#4ff2f8"
-# tmux_thm_inactive_fg="#82aaff"
-# tmux_thm_dir_fg="#a78bfa"
-# tmux_thm_active="#34febb"
+tmux_thm_fg="#a8b5d1"
+tmux_thm_bg="default"
+tmux_thm_black="#141820"
+tmux_thm_gray="#3b4261"
+tmux_thm_session_fg="#4ff2f8"
+tmux_thm_inactive_fg="#82aaff"
+tmux_thm_dir_fg="#a78bfa"
+tmux_thm_active="#34febb"
 
-# base16_eighties theme
+# eighties theme
 # tmux_thm_fg="#e0e0e0"
 # tmux_thm_bg="default"
 # tmux_thm_black="#2d2d2d"
