--- a/kitty/.config/kitty/eighties.conf
+++ b/kitty/.config/kitty/eighties.conf
@@ -5,45 +5,44 @@
 ## author: Mike McBride
 ## upstream: https://github.com/mikemcbride/eighties.nvim
 
-background #2D2D2D
-foreground #e0e0e0
+background #1d2021
+foreground #d4be98
 
-selection_background #d6d6d6
-selection_foreground #2d2d2d
+selection_background #d4be98
+selection_foreground #1d2021
 
-cursor #a0a0a0
+cursor #a89984
 cursor_text_color background
 
 # Black
-color0 #2d2d2d
-color8 #999999
+color0 #665c54
+color8 #928374
 
 # Red
-color1 #f2777a
-color9 #f2777a
+color1 #ed6e6a
+color9 #ed6e6a
 
 # Green
-color2  #99cc99
-color10 #99cc99
+color2  #a4bd76
+color10 #a4bd76
 
 # Yellow
-color3  #ffcc66
+color3  #e5b35c
 # Orange
-color11 #f9a170
+color11 #ed9259
 
 # Blue
-color4 #72aeea
-color12 #72aeea
+color4  #7aaeb5
+color12 #7aaeb5
 
-# Purple
-color5  #cc99cc
-color13 #cc99cc
+# Magenta
+color5  #d18cab
+color13 #d18cab
 
 # Cyan
-color6  #66cccc
-color14 #66cccc
+color6  #7dbc9b
+color14 #7dbc9b
 
 # White
-color7  #e0e0e0
-color15 #ffffff
-
+color7  #d4be98
+color15 #d4be98
