--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -7,6 +7,7 @@
 #: characters.
 
 font_family      MonoLisa
+# font_family      SF Mono
 font_size        16.0
 
 # bold_font        auto
@@ -1958,5 +1959,6 @@ map cmd+t       no_op
 #: }}}
 
 # BEGIN_KITTY_THEME
+# include eighties.conf
 include electron.conf
 # END_KITTY_THEME
