--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -5,16 +5,6 @@ set-option -ga terminal-overrides ",xterm-256color:Tc"
 # don't add a delay when pressing escape
 set -s escape-time 0
 
-# gruvbox material theme
-# tmux_thm_fg="#d4be98"
-# tmux_thm_bg="default"
-# tmux_thm_black="#1d2021"
-# tmux_thm_gray="#504945"
-# tmux_thm_session_fg="#89b482"
-# tmux_thm_inactive_fg="#7daea3"
-# tmux_thm_dir_fg="#d3869b"
-# tmux_thm_active="#e78a4e"
-
 # electron_highlighter theme
 tmux_thm_fg="#a8b5d1"
 tmux_thm_bg="default"
@@ -26,19 +16,18 @@ tmux_thm_dir_fg="#a78bfa"
 tmux_thm_active="#34febb"
 
 # eighties theme
-# tmux_thm_fg="#e0e0e0"
+# tmux_thm_fg="#d5c4a1"
 # tmux_thm_bg="default"
-# tmux_thm_black="#2d2d2d"
-# tmux_thm_gray="#515151"
-# tmux_thm_session_fg="#66cccc"
-# tmux_thm_dir_fg="#cc99cc"
-# tmux_thm_inactive_fg="#d6d6d6"
-# tmux_thm_active="#99cc99"
+# tmux_thm_black="#1d2021"
+# tmux_thm_gray="#504945"
+# tmux_thm_session_fg="#7dbc9b"
+# tmux_thm_dir_fg="#d18cab"
+# tmux_thm_inactive_fg="#7aaeb5"
+# tmux_thm_active="#ed9259"
 
 # status
 set -gq status "on"
 set -gq status-bg "${tmux_thm_bg}"
-# set -gq status-bg "default"
 set -gq status-justify "left"
 set -gq status-left-length "100"
 set -gq status-right-length "100"
