--- a/kitty/.config/kitty/electron.conf
+++ b/kitty/.config/kitty/electron.conf
@@ -28,7 +28,7 @@ inactive_border_color #292e42
 # normal
 color0 #15161e
 color1 #f7768e
-color2 #6af699
+color2 #34febb
 color3 #ffbf7a
 color4 #82aaff
 color5 #c792ea
@@ -38,7 +38,7 @@ color7 #99a3b8
 # bright
 color8 #506686
 color9 #f7768e
-color10 #6af699
+color10 #34febb
 color11 #ffbf7a
 color12 #82aaff
 color13 #c792ea
