--- a/kitty/.config/kitty/gruvbox.conf
+++ b/kitty/.config/kitty/gruvbox.conf
@@ -27,9 +27,10 @@ color2  #a9b665
 color10 #a9b665
 
 # Yellow
-#color3  #e78a4e
-color3 #d8a657
 color11 #d8a657
+
+# Orange
+color3  #e78a4e
 
 # Blue
 color4  #7daea3
