--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -7,7 +7,7 @@
 #: characters.
 
 font_family      MonoLisa
-# font_family      SF Mono
+# font_family      Berkeley Mono
 font_size        16.0
 
 # bold_font        auto
@@ -593,7 +593,7 @@ cursor_blink_interval 0
 #: values set top, horizontal and bottom. Four values set top, right,
 #: bottom and left.
 
-window_padding_width 2 4 0
+window_padding_width 12 4 0
 
 #: The window padding (in pts) (blank area between the text and the
 #: window border). A single value sets all four sides. Two values set
@@ -1959,6 +1959,7 @@ map cmd+t       no_op
 #: }}}
 
 # BEGIN_KITTY_THEME
-# include eighties.conf
 include electron.conf
+# include eighties.conf
+# include gruvbox.conf
 # END_KITTY_THEME
