--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -25,6 +25,16 @@ tmux_thm_active="#34febb"
 # tmux_thm_inactive_fg="#7aaeb5"
 # tmux_thm_active="#ed9259"
 
+# gruvbox material theme
+# tmux_thm_fg="#d4be98"
+# tmux_thm_bg="default"
+# tmux_thm_black="#1d2021"
+# tmux_thm_gray="#504945"
+# tmux_thm_session_fg="#89b482"
+# tmux_thm_inactive_fg="#7daea3"
+# tmux_thm_dir_fg="#d3869b"
+# tmux_thm_active="#e78a4e"
+
 # status
 set -gq status "on"
 set -gq status-bg "${tmux_thm_bg}"
