--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,6 +1,7 @@
 # FONTS
 
 font-family = MonoLisa
+# font-family = JetBrains Mono
 font-size = 16
 
 # font is a little too thin without this
@@ -25,10 +26,13 @@ background-opacity = 0.97
 
 # COLORS
 
+# electronhighlighter
 background = #141820
 foreground = #a8b5d1
 selection-background = #283457
 selection-foreground = #a8b5d1
+cursor-color = #a8b5d1
+cursor-text = #1a1b26
 
 palette = 0=#15161e
 palette = 1=#f7768e
@@ -49,11 +53,58 @@ palette = 15=#a8b5d1
 palette = 16=#ffbf7a
 palette = 17=#ff5874
 
+# gruvbox-material
+# background = #1d2021
+# foreground = #d4be98
+# selection-background = #d4be98
+# selection-foreground = #1d2021
+# cursor-color = #a89984
+# cursor-text = #1d2021
+#
+# palette = 0=#665c54
+# palette = 1=#ea6962
+# palette = 2=#a9b665
+# palette = 3=#e78a4e
+# palette = 4=#7daea3
+# palette = 5=#d3869b
+# palette = 6=#89b482
+# palette = 7=#d4be98
+# palette = 8=#928374
+# palette = 9=#ea6962
+# palette = 10=#a9b665
+# palette = 11=#d8a657
+# palette = 12=#7daea3
+# palette = 13=#d3869b
+# palette = 14=#89b482
+# palette = 15=#d4be98
+
+# eighties
+# background = #1d2021
+# foreground = #d4be98
+# selection-background = #d4be98
+# selection-foreground = #1d2021
+# cursor-color = #a89984
+# cursor-text = #1d2021
+#
+# palette = 0=#665c54
+# palette = 1=#ed6e6a
+# palette = 2=#a4bd76
+# palette = 3=#e5b35c
+# palette = 4=#7aaeb5
+# palette = 5=#d18cab
+# palette = 6=#7dbc9b
+# palette = 7=#d4be98
+# palette = 8=#928374
+# palette = 9=#ed6e6a
+# palette = 10=#a4bd76
+# palette = 11=#ed9259
+# palette = 12=#7aaeb5
+# palette = 13=#d18cab
+# palette = 14=#7dbc9b
+# palette = 15=#d4be98
 
 # CURSOR
 
-cursor-color = #a8b5d1
-cursor-text = #1a1b26
 cursor-style = block
 cursor-style-blink = false
 
