switch to alternate move.nvim plugin, update vim plugins, etc

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -54,3 +54,6 @@
     helper = !/opt/homebrew/bin/gh auth git-credential
 [credential "https://gist.github.com"]
     helper = !/opt/homebrew/bin/gh auth git-credential
+[maintenance]
+	repo = /Users/mike/work/nebula-backstage-plugins
+	repo = /Users/mike/work/dv-df-template
