--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,7 +1,7 @@
 # FONTS
 
-font-family = MonoLisa
-# font-family = JetBrains Mono
+# font-family = MonoLisa
+font-family = JetBrains Mono
 font-size = 16
 
 # font is a little too thin without this
