refactor a bunch of neovim stuff, remove plugins, use lazy correctly

--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,7 +1,6 @@
 # FONTS
 
-# font-family = MonoLisa
-font-family = JetBrains Mono
+font-family = MonoLisa Custom
 font-size = 16
 
 # font is a little too thin without this
