--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -10,30 +10,16 @@ tmux_thm_fg="#a8b5d1"
 tmux_thm_bg="default"
 tmux_thm_black="#141820"
 tmux_thm_gray="#3b4261"
-tmux_thm_session_fg="#4ff2f8"
+tmux_thm_active_fg="#34febb"
+tmux_thm_active_bg="#1F3A37"
 tmux_thm_inactive_fg="#82aaff"
-tmux_thm_dir_fg="#a78bfa"
-tmux_thm_active="#34febb"
-
-# eighties theme
-# tmux_thm_fg="#d5c4a1"
-# tmux_thm_bg="default"
-# tmux_thm_black="#1d2021"
-# tmux_thm_gray="#504945"
-# tmux_thm_session_fg="#7dbc9b"
-# tmux_thm_dir_fg="#d18cab"
-# tmux_thm_inactive_fg="#7aaeb5"
-# tmux_thm_active="#ed9259"
-
-# gruvbox material theme
-# tmux_thm_fg="#d4be98"
-# tmux_thm_bg="default"
-# tmux_thm_black="#1d2021"
-# tmux_thm_gray="#504945"
-# tmux_thm_session_fg="#89b482"
-# tmux_thm_inactive_fg="#7daea3"
-# tmux_thm_dir_fg="#d3869b"
-# tmux_thm_active="#e78a4e"
+tmux_thm_inactive_bg="#262D41"
+tmux_thm_session_fg="#ffbf7a"
+tmux_thm_session_bg="#38312E"
+tmux_thm_dir_fg="#c792ea"
+tmux_thm_dir_bg="#2F2A3D"
+tmux_thm_time_fg="#4ff2f8"
+tmux_thm_time_bg="#1F3940"
 
 # status
 set -gq status "on"
@@ -41,6 +27,7 @@ set -gq status-bg "${tmux_thm_bg}"
 set -gq status-justify "left"
 set -gq status-left-length "100"
 set -gq status-right-length "100"
+set -gq status-position bottom
 
 # messages
 set -gq message-style "fg=${tmux_thm_session_fg},bg=${tmux_thm_gray},align=centre"
@@ -58,30 +45,33 @@ setw -gq window-status-style "fg=${tmux_thm_fg},bg=${tmux_thm_bg},none"
 # --------=== Statusline
 
 wt_enabled="off"
-right_separator="█"
-left_separator="█"
-
-# current directory name
-right_column1="#[fg=$tmux_thm_dir_fg,bg=$tmux_thm_bg,nobold,nounderscore,noitalics]$right_separator#[fg=$tmux_thm_black,bg=$tmux_thm_dir_fg,nobold,nounderscore,noitalics]  #[fg=$tmux_thm_fg,bg=$tmux_thm_gray] #{b:pane_current_path} "
 
 # current session name
-right_column2="#[fg=$tmux_thm_session_fg,bg=$tmux_thm_gray]$right_separator#[fg=$tmux_thm_black,bg=$tmux_thm_session_fg,nobold,nounderscore,noitalics] #[fg=$tmux_thm_fg,bg=$tmux_thm_gray] #S "
+session_column="#[fg=$tmux_thm_session_fg,bg=$tmux_thm_session_bg] #S "
+
+# time
+time_column="#[fg=$tmux_thm_time_fg,bg=$tmux_thm_time_bg] %R "
+
+# current directory name
+current_dir_column="#[fg=$tmux_thm_dir_fg,bg=$tmux_thm_dir_bg] #{b:pane_current_path} "
 
 # inactive window
-window_status_format="#[fg=$tmux_thm_inactive_fg,bg=$tmux_thm_gray] #I #[fg=$tmux_thm_fg,bg=$tmux_thm_bg] #W "
+window_status_format="#[fg=$tmux_thm_inactive_fg,bg=$tmux_thm_inactive_bg] #I #W "
 
 # active window
-window_status_current_format="#[fg=$tmux_thm_black,bg=$tmux_thm_active] #I #[fg=$tmux_thm_fg,bg=$tmux_thm_bg] #W "
+window_status_current_format="#[fg=$tmux_thm_active_fg,bg=$tmux_thm_active_bg] #I #W "
 
-set -gq status-left ""
-
-set -gq status-right "${right_column1}${right_column2}"
-
+# Set the status items.
+# left side gets the session name plus a list of windows.
+# right side gets the current time and current directory.
+set -gq status-left "${session_column}"
+set -gq status-right "${current_dir_column}${time_column}"
 setw -gq window-status-format "${window_status_format}"
 setw -gq window-status-current-format "${window_status_current_format}"
 
 # make background color "default" - e.g., use the color of the terminal.
 set-option -g status-style bg=default
+
 #------------------------------
 # End theme
 #------------------------------
