--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -7,7 +7,7 @@ set -s escape-time 0
 
 # electron_highlighter theme
 tmux_thm_fg="#a8b5d1"
-tmux_thm_bg="default"
+tmux_thm_bg="#1b212c"
 tmux_thm_black="#141820"
 tmux_thm_gray="#3b4261"
 tmux_thm_active_fg="#34febb"
@@ -44,16 +44,14 @@ setw -gq window-status-style "fg=${tmux_thm_fg},bg=${tmux_thm_bg},none"
 
 # --------=== Statusline
 
-wt_enabled="off"
-
 # current session name
-session_column="#[fg=$tmux_thm_session_fg,bg=$tmux_thm_session_bg] #S "
+session_column="#[fg=$tmux_thm_session_fg,bg=$tmux_thm_session_bg]  #S "
 
 # time
-time_column="#[fg=$tmux_thm_time_fg,bg=$tmux_thm_time_bg] %R "
+time_column="#[fg=$tmux_thm_time_fg,bg=$tmux_thm_time_bg]  %R "
 
 # current directory name
-current_dir_column="#[fg=$tmux_thm_dir_fg,bg=$tmux_thm_dir_bg] #{b:pane_current_path} "
+current_dir_column="#[fg=$tmux_thm_dir_fg,bg=$tmux_thm_dir_bg]  #{b:pane_current_path} "
 
 # inactive window
 window_status_format="#[fg=$tmux_thm_inactive_fg,bg=$tmux_thm_inactive_bg] #I #W "
@@ -70,8 +68,8 @@ setw -gq window-status-format "${window_status_format}"
 setw -gq window-status-current-format "${window_status_current_format}"
 
 # make background color "default" - e.g., use the color of the terminal.
-set-option -g status-style bg=default
-
+# I don't know why we also have to set this when we set the status-bg
+set-option -g status-style bg="${tmux_thm_bg}"
 #------------------------------
 # End theme
 #------------------------------
