--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -6,20 +6,54 @@ set-option -ga terminal-overrides ",xterm-256color:Tc"
 set -s escape-time 0
 
 # electron_highlighter theme
-tmux_thm_fg="#a8b5d1"
-tmux_thm_bg="#1b212c"
-tmux_thm_black="#141820"
-tmux_thm_gray="#3b4261"
-tmux_thm_active_fg="#34febb"
-tmux_thm_active_bg="#1F3A37"
-tmux_thm_inactive_fg="#82aaff"
-tmux_thm_inactive_bg="#262D41"
-tmux_thm_session_fg="#ffbf7a"
-tmux_thm_session_bg="#38312E"
-tmux_thm_dir_fg="#c792ea"
-tmux_thm_dir_bg="#2F2A3D"
-tmux_thm_time_fg="#4ff2f8"
-tmux_thm_time_bg="#1F3940"
+# tmux_thm_fg="#a8b5d1"
+# tmux_thm_bg="#1b212c"
+# tmux_thm_black="#141820"
+# tmux_thm_gray="#3b4261"
+# tmux_thm_active_fg="#34febb"
+# tmux_thm_active_bg="#1F3A37"
+# tmux_thm_inactive_fg="#82aaff"
+# tmux_thm_inactive_bg="#262D41"
+# tmux_thm_session_fg="#ffbf7a"
+# tmux_thm_session_bg="#38312E"
+# tmux_thm_dir_fg="#c792ea"
+# tmux_thm_dir_bg="#2F2A3D"
+# tmux_thm_time_fg="#4ff2f8"
+# tmux_thm_time_bg="#1F3940"
+
+
+# catppuccin-mocha theme
+tmux_thm_fg="#cdd6f4"
+tmux_thm_bg="#11111b"
+tmux_thm_black="#181825"
+tmux_thm_gray="#45475a"
+tmux_thm_active_fg="#a6e3a1"
+tmux_thm_active_bg="#37463d"
+tmux_thm_inactive_fg="#89b4fa"
+tmux_thm_inactive_bg="#303b54"
+tmux_thm_session_fg="#fab387"
+tmux_thm_session_bg="#4c3a36"
+tmux_thm_dir_fg="#cba6f7"
+tmux_thm_dir_bg="#403753"
+tmux_thm_time_fg="#94e2d5"
+tmux_thm_time_bg="#32464a"
+
+
+# early-riser theme
+# tmux_thm_fg="#424c57"
+# tmux_thm_bg="#f7fafc"
+# tmux_thm_black="#d4dbe3"
+# tmux_thm_gray="#a8b3bd"
+# tmux_thm_active_fg="#10b981"
+# tmux_thm_active_bg="#bee9dd"
+# tmux_thm_inactive_fg="#2563eb"
+# tmux_thm_inactive_bg="#c3d4f8"
+# tmux_thm_session_fg="#ea580c"
+# tmux_thm_session_bg="#f4d2c0"
+# tmux_thm_dir_fg="#7c3aed"
+# tmux_thm_dir_bg="#d9caf8"
+# tmux_thm_time_fg="#06b6d4"
+# tmux_thm_time_bg="#bce9f2"
 
 # status
 set -gq status "on"
