--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -21,39 +21,37 @@ set -s escape-time 0
 # tmux_thm_time_fg="#4ff2f8"
 # tmux_thm_time_bg="#1F3940"
 
+# gruvbox material theme
+# tmux_thm_fg="#d4be98"
+# tmux_thm_bg="#1d2021"
+# tmux_thm_black="#1d2021"
+# tmux_thm_gray="#504945"
+# tmux_thm_session_fg="#e78a4e"
+# tmux_thm_session_bg="#45362a"
+# tmux_thm_inactive_fg="#a89984"
+# tmux_thm_inactive_bg="#32302f"
+# tmux_thm_active_fg="#89b482"
+# tmux_thm_active_bg="#323e34"
+# tmux_thm_dir_fg="#d3869b"
+# tmux_thm_dir_bg="#423539"
+# tmux_thm_time_fg="#689d6a"
+# tmux_thm_time_bg="#2c392f"
 
-# catppuccin-mocha theme
-tmux_thm_fg="#cdd6f4"
-tmux_thm_bg="#11111b"
-tmux_thm_black="#181825"
-tmux_thm_gray="#45475a"
-tmux_thm_active_fg="#a6e3a1"
-tmux_thm_active_bg="#37463d"
-tmux_thm_inactive_fg="#89b4fa"
-tmux_thm_inactive_bg="#303b54"
-tmux_thm_session_fg="#fab387"
-tmux_thm_session_bg="#4c3a36"
-tmux_thm_dir_fg="#cba6f7"
-tmux_thm_dir_bg="#403753"
-tmux_thm_time_fg="#94e2d5"
-tmux_thm_time_bg="#32464a"
-
-
-# early-riser theme
-# tmux_thm_fg="#424c57"
-# tmux_thm_bg="#f7fafc"
-# tmux_thm_black="#d4dbe3"
-# tmux_thm_gray="#a8b3bd"
-# tmux_thm_active_fg="#10b981"
-# tmux_thm_active_bg="#bee9dd"
-# tmux_thm_inactive_fg="#2563eb"
-# tmux_thm_inactive_bg="#c3d4f8"
-# tmux_thm_session_fg="#ea580c"
-# tmux_thm_session_bg="#f4d2c0"
-# tmux_thm_dir_fg="#7c3aed"
-# tmux_thm_dir_bg="#d9caf8"
-# tmux_thm_time_fg="#06b6d4"
-# tmux_thm_time_bg="#bce9f2"
+# everforest theme
+tmux_thm_fg="#d3c6aa"
+tmux_thm_bg="#272e33"
+tmux_thm_black="#272e33"
+tmux_thm_gray="#7a8478"
+tmux_thm_session_fg="#dbbc7f"
+tmux_thm_session_bg="#555347"
+tmux_thm_inactive_fg="#a6b0a0"
+tmux_thm_inactive_bg="#414b50"
+tmux_thm_active_fg="#7fbbb3"
+tmux_thm_active_bg="#3e5254"
+tmux_thm_dir_fg="#d699b6"
+tmux_thm_dir_bg="#544a55"
+tmux_thm_time_fg="#83c092"
+tmux_thm_time_bg="#3f534b"
 
 # status
 set -gq status "on"
