tweak tmux colors for everforest

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -42,16 +42,16 @@ tmux_thm_fg="#d3c6aa"
 tmux_thm_bg="#272e33"
 tmux_thm_black="#272e33"
 tmux_thm_gray="#7a8478"
-tmux_thm_session_fg="#dbbc7f"
-tmux_thm_session_bg="#555347"
+tmux_thm_session_fg="#e69875"
+tmux_thm_session_bg="#584a44"
 tmux_thm_inactive_fg="#a6b0a0"
-tmux_thm_inactive_bg="#414b50"
-tmux_thm_active_fg="#7fbbb3"
-tmux_thm_active_bg="#3e5254"
+tmux_thm_inactive_bg="#374145"
+tmux_thm_active_fg="#a7c080"
+tmux_thm_active_bg="#485447"
 tmux_thm_dir_fg="#d699b6"
 tmux_thm_dir_bg="#544a55"
-tmux_thm_time_fg="#83c092"
-tmux_thm_time_bg="#3f534b"
+tmux_thm_time_fg="#7fbbb3"
+tmux_thm_time_bg="#3e5254"
 
 # status
 set -gq status "on"
