--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,8 +1,7 @@
 # FONTS
 
-# font-family = MonoLisa Custom
-font-family = JetBrains Mono
-# font-family = Berkeley Mono
+font-family = MonoLisa
+# font-family = JetBrains Mono
 font-size = 16
 
 # font is a little too thin without this, at least on mac retina displays
@@ -28,40 +27,73 @@ background-opacity = 0.95
 # COLORS
 
 # electron highlighter
-# background = #141820
-# foreground = #a8b5d1
-# selection-background = #283457
-# selection-foreground = #a8b5d1
-# cursor-color = #a8b5d1
-# cursor-text = #1a1b26
+background = #141820
+foreground = #a8b5d1
+selection-background = #283457
+selection-foreground = #a8b5d1
+cursor-color = #a8b5d1
+cursor-text = #1a1b26
+
+# black
+palette = 0=#15161e
+palette = 8=#506686
+# red
+palette = 1=#f7768e
+palette = 9=#f7768e
+# green
+palette = 2=#34febb
+palette = 10=#34febb
+# yellow
+palette = 3=#ffbf7a
+palette = 11=#ffbf7a
+# blue
+palette = 4=#82aaff
+palette = 12=#82aaff
+# purple
+palette = 5=#c792ea
+palette = 13=#c792ea
+# aqua
+palette = 6=#4ff2f8
+palette = 14=#4ff2f8
+# white
+palette = 7=#99a3b8
+palette = 15=#a8b5d1
+# extra
+palette = 16=#ffbf7a
+palette = 17=#ff5874
+
+# # everforest
+# background = #272e33
+# foreground = #d3c6aa
+# selection-background = #d3c6aa
+# selection-foreground = #272e33
+# cursor-color = #a6b0a0
+# cursor-text = #272e33
 #
 # # black
-# palette = 0=#15161e
-# palette = 8=#506686
+# palette = 0=#272e33
+# palette = 8=#7a8478
 # # red
-# palette = 1=#f7768e
-# palette = 9=#f7768e
+# palette = 1=#e67e80
+# palette = 9=#e67e80
 # # green
-# palette = 2=#34febb
-# palette = 10=#34febb
+# palette = 2=#a7c080
+# palette = 10=#a7c080
 # # yellow
-# palette = 3=#ffbf7a
-# palette = 11=#ffbf7a
+# palette = 3=#dbbc7f
+# palette = 11=#dbbc7f
 # # blue
-# palette = 4=#82aaff
-# palette = 12=#82aaff
+# palette = 4=#7fbbb3
+# palette = 12=#7fbbb3
 # # purple
-# palette = 5=#c792ea
-# palette = 13=#c792ea
+# palette = 5=#d699b6
+# palette = 13=#d699b6
 # # aqua
-# palette = 6=#4ff2f8
-# palette = 14=#4ff2f8
+# palette = 6=#83c092
+# palette = 14=#83c092
 # # white
-# palette = 7=#99a3b8
-# palette = 15=#a8b5d1
-# # extra
-# palette = 16=#ffbf7a
-# palette = 17=#ff5874
+# palette = 7=#d3c6aa
+# palette = 15=#a6b0a0
 
 # gruvbox-material
 # background = #1d2021
@@ -71,64 +103,22 @@ background-opacity = 0.95
 # cursor-color = #a89984
 # cursor-text = #1d2021
 #
-# # black
-# palette = 0=#1d2021
-# palette = 8=#928374
-# # red
+# palette = 0=#665c54
 # palette = 1=#ea6962
-# palette = 9=#ea6962
-# # green
 # palette = 2=#a9b665
-# palette = 10=#a9b665
-# # yellow
 # palette = 3=#e78a4e
-# palette = 11=#d8a657
-# # blue
 # palette = 4=#7daea3
-# palette = 12=#7daea3
-# # purple
 # palette = 5=#d3869b
-# palette = 13=#d3869b
-# # aqua
 # palette = 6=#89b482
-# palette = 14=#89b482
-# # white
 # palette = 7=#d4be98
-# palette = 15=#a89984
-
-# # everforest
-background = #272e33
-foreground = #d3c6aa
-selection-background = #d3c6aa
-selection-foreground = #272e33
-cursor-color = #a6b0a0
-cursor-text = #272e33
-
-# black
-palette = 0=#272e33
-palette = 8=#7a8478
-# red
-palette = 1=#e67e80
-palette = 9=#e67e80
-# green
-palette = 2=#a7c080
-palette = 10=#a7c080
-# yellow
-palette = 3=#dbbc7f
-palette = 11=#dbbc7f
-# blue
-palette = 4=#7fbbb3
-palette = 12=#7fbbb3
-# purple
-palette = 5=#d699b6
-palette = 13=#d699b6
-# aqua
-palette = 6=#83c092
-palette = 14=#83c092
-# white
-palette = 7=#d3c6aa
-palette = 15=#a6b0a0
-
+# palette = 8=#928374
+# palette = 9=#ea6962
+# palette = 10=#a9b665
+# palette = 11=#d8a657
+# palette = 12=#7daea3
+# palette = 13=#d3869b
+# palette = 14=#89b482
+# palette = 15=#d4be98
 
 # CURSOR
 
