--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -6,20 +6,20 @@ set-option -ga terminal-overrides ",xterm-256color:Tc"
 set -s escape-time 0
 
 # electron_highlighter theme
-# tmux_thm_fg="#a8b5d1"
-# tmux_thm_bg="#1b212c"
-# tmux_thm_black="#141820"
-# tmux_thm_gray="#3b4261"
-# tmux_thm_active_fg="#34febb"
-# tmux_thm_active_bg="#1F3A37"
-# tmux_thm_inactive_fg="#82aaff"
-# tmux_thm_inactive_bg="#262D41"
-# tmux_thm_session_fg="#ffbf7a"
-# tmux_thm_session_bg="#38312E"
-# tmux_thm_dir_fg="#c792ea"
-# tmux_thm_dir_bg="#2F2A3D"
-# tmux_thm_time_fg="#4ff2f8"
-# tmux_thm_time_bg="#1F3940"
+tmux_thm_fg="#a8b5d1"
+tmux_thm_bg="#1b212c"
+tmux_thm_black="#141820"
+tmux_thm_gray="#3b4261"
+tmux_thm_active_fg="#34febb"
+tmux_thm_active_bg="#1F3A37"
+tmux_thm_inactive_fg="#82aaff"
+tmux_thm_inactive_bg="#262D41"
+tmux_thm_session_fg="#ffbf7a"
+tmux_thm_session_bg="#38312E"
+tmux_thm_dir_fg="#c792ea"
+tmux_thm_dir_bg="#2F2A3D"
+tmux_thm_time_fg="#4ff2f8"
+tmux_thm_time_bg="#1F3940"
 
 # everforest theme
 # tmux_thm_fg="#d3c6aa"
@@ -38,22 +38,20 @@ set -s escape-time 0
 # tmux_thm_time_bg="#3e5254"
 
 # gruvbox material theme
-tmux_thm_fg="#d4be98"
-tmux_thm_bg="#1d2021"
-tmux_thm_black="#1d2021"
-tmux_thm_gray="#504945"
-# tmux_thm_session_fg="#d8a657" # yellow session
-# tmux_thm_session_bg="#423b2b" # yellow session bg
-tmux_thm_session_fg="#e78a4e" # orange session
-tmux_thm_session_bg="#45362a" # orange session bg
-tmux_thm_inactive_fg="#a89984"
-tmux_thm_inactive_bg="#32302f"
-tmux_thm_active_fg="#89b482"
-tmux_thm_active_bg="#323e34"
-tmux_thm_dir_fg="#d3869b"
-tmux_thm_dir_bg="#423539"
-tmux_thm_time_fg="#689d6a"
-tmux_thm_time_bg="#2c392f"
+# tmux_thm_fg="#d4be98"
+# tmux_thm_bg="#1d2021"
+# tmux_thm_black="#1d2021"
+# tmux_thm_gray="#504945"
+# tmux_thm_session_fg="#e78a4e"
+# tmux_thm_session_bg="#45362a"
+# tmux_thm_inactive_fg="#a89984"
+# tmux_thm_inactive_bg="#32302f"
+# tmux_thm_active_fg="#89b482"
+# tmux_thm_active_bg="#323e34"
+# tmux_thm_dir_fg="#d3869b"
+# tmux_thm_dir_bg="#423539"
+# tmux_thm_time_fg="#689d6a"
+# tmux_thm_time_bg="#2c392f"
 
 # status
 set -gq status "on"
