--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -56,8 +56,8 @@ palette = 13=#c792ea
 palette = 6=#4ff2f8
 palette = 14=#4ff2f8
 # white
-palette = 7=#99a3b8
-palette = 15=#a8b5d1
+palette = 7=#7c8eac
+palette = 15=#c5cee0
 # extra
 palette = 16=#ffbf7a
 palette = 17=#ff5874
