enable rerere in git

--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -54,3 +54,5 @@
     helper = !/opt/homebrew/bin/gh auth git-credential
 [credential "https://gist.github.com"]
     helper = !/opt/homebrew/bin/gh auth git-credential
+[rerere]
+	enabled = true
