--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -53,6 +53,39 @@ tmux_thm_time_bg="#1F3940"
 # tmux_thm_time_fg="#689d6a"
 # tmux_thm_time_bg="#2c392f"
 
+# catppuccin-mocha theme
+# tmux_thm_fg="#cdd6f4"
+# tmux_thm_bg="#11111b"
+# tmux_thm_black="#181825"
+# tmux_thm_gray="#45475a"
+# tmux_thm_active_fg="#a6e3a1"
+# tmux_thm_active_bg="#37463d"
+# tmux_thm_inactive_fg="#89b4fa"
+# tmux_thm_inactive_bg="#303b54"
+# tmux_thm_session_fg="#fab387"
+# tmux_thm_session_bg="#4c3a36"
+# tmux_thm_dir_fg="#cba6f7"
+# tmux_thm_dir_bg="#403753"
+# tmux_thm_time_fg="#94e2d5"
+# tmux_thm_time_bg="#32464a"
+
+
+# early-riser theme
+# tmux_thm_fg="#424c57"
+# tmux_thm_bg="#f7fafc"
+# tmux_thm_black="#d4dbe3"
+# tmux_thm_gray="#a8b3bd"
+# tmux_thm_active_fg="#10b981"
+# tmux_thm_active_bg="#bee9dd"
+# tmux_thm_inactive_fg="#2563eb"
+# tmux_thm_inactive_bg="#c3d4f8"
+# tmux_thm_session_fg="#ea580c"
+# tmux_thm_session_bg="#f4d2c0"
+# tmux_thm_dir_fg="#7c3aed"
+# tmux_thm_dir_bg="#d9caf8"
+# tmux_thm_time_fg="#06b6d4"
+# tmux_thm_time_bg="#bce9f2"
+
 # status
 set -gq status "on"
 set -gq status-bg "${tmux_thm_bg}"
