add some raycast scripts, update nvim keymaps

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -21,55 +21,6 @@ tmux_thm_dir_bg="#2F2A3D"
 tmux_thm_time_fg="#4ff2f8"
 tmux_thm_time_bg="#1F3940"
 
-# everforest theme
-# tmux_thm_fg="#d3c6aa"
-# tmux_thm_bg="#272e33"
-# tmux_thm_black="#272e33"
-# tmux_thm_gray="#7a8478"
-# tmux_thm_session_fg="#e69875"
-# tmux_thm_session_bg="#584a44"
-# tmux_thm_inactive_fg="#a6b0a0"
-# tmux_thm_inactive_bg="#374145"
-# tmux_thm_active_fg="#a7c080"
-# tmux_thm_active_bg="#485447"
-# tmux_thm_dir_fg="#d699b6"
-# tmux_thm_dir_bg="#544a55"
-# tmux_thm_time_fg="#7fbbb3"
-# tmux_thm_time_bg="#3e5254"
-
-# gruvbox material theme
-# tmux_thm_fg="#d4be98"
-# tmux_thm_bg="#1d2021"
-# tmux_thm_black="#1d2021"
-# tmux_thm_gray="#504945"
-# tmux_thm_session_fg="#e78a4e"
-# tmux_thm_session_bg="#45362a"
-# tmux_thm_inactive_fg="#a89984"
-# tmux_thm_inactive_bg="#32302f"
-# tmux_thm_active_fg="#89b482"
-# tmux_thm_active_bg="#323e34"
-# tmux_thm_dir_fg="#d3869b"
-# tmux_thm_dir_bg="#423539"
-# tmux_thm_time_fg="#689d6a"
-# tmux_thm_time_bg="#2c392f"
-
-# catppuccin-mocha theme
-# tmux_thm_fg="#cdd6f4"
-# tmux_thm_bg="#11111b"
-# tmux_thm_black="#181825"
-# tmux_thm_gray="#45475a"
-# tmux_thm_active_fg="#a6e3a1"
-# tmux_thm_active_bg="#37463d"
-# tmux_thm_inactive_fg="#89b4fa"
-# tmux_thm_inactive_bg="#303b54"
-# tmux_thm_session_fg="#fab387"
-# tmux_thm_session_bg="#4c3a36"
-# tmux_thm_dir_fg="#cba6f7"
-# tmux_thm_dir_bg="#403753"
-# tmux_thm_time_fg="#94e2d5"
-# tmux_thm_time_bg="#32464a"
-
-
 # early-riser theme
 # tmux_thm_fg="#424c57"
 # tmux_thm_bg="#f7fafc"
@@ -198,9 +149,8 @@ bind-key x kill-pane
 # forget the find window. That is for chumps
 bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
 
-# use zsh in tmux
-# set -g default-command /opt/homebrew/bin/zsh
-# set -g default-shell /opt/homebrew/bin/zsh
+# run tmux-sessionx even faster with just ctrl-g
+bind-key -r g run-shell "~/.tmux/plugins/tmux-sessionx/scripts/sessionx.sh"
 
 # use fish in tmux
 set -g default-command /opt/homebrew/bin/fish
@@ -212,9 +162,13 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 set -g @plugin 'fcsonline/tmux-thumbs'
+set -g @plugin 'omerxx/tmux-sessionx'
 
 # plugin configs
 set -g @continuum-restore 'on' # tell continuum to restore previous session.
+set -g @sessionx-bind 'o' # run tmux-sessionx on prefix-o
+set -g @sessionx-zoxide-mode 'on'
+set -g @sessionx-filter-current 'false'
 
 run-shell ~/.tmux/plugins/tmux-thumbs/tmux-thumbs.tmux
 
